<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation" tools:locale="ru">
	<string name="app_name">Tennis bot</string>
	<string name="onboarding_text_title_1">Ракеточная экоcистема</string>
	<string name="onboarding_text_1">Тысячи игроков в разных странах мира уже нашли себе равных партнеров, друзей</string>
	<string name="onboarding_text_title_2">Новое поколение</string>
	<string name="onboarding_text_2">Социальная сеть с возможностью получать ценные призы за активные действия</string>
	<string name="onboarding_text_title_3">Безграничное общение</string>
	<string name="onboarding_text_3">Вы всегда в центре событий и новостей. Полная синхронизация Приложения и Telegram</string>
	<string name="onboarding_start_button">Пройти регистрацию</string>
	<string name="onboarding_login_button">Войти</string>
	<string name="onboarding_title_insert_phone_number">Введи номер телефона</string>
	<string name="onboarding_text_incorrect_phone_number">Введите действительный номер</string>
	<string name="onboarding_proceed_without_registration_button">Войти без регистрации</string>
	<string name="onboarding_continue_button">Далее</string>
	<string name="error_text">Упс! Что-то пошло не так</string>
	<string name="error_try_again_text"><u>Попробовать еще раз</u></string>
	<string name="location_title">Твое местоположение</string>
	<string name="error_pincode_smscode">Неверный пин-код</string>
	<string name="smscode_repeat_timer">Повторить</string>
	<string name="smscode_repeat_timer_time">30</string>
	<string name="location_district">Район</string>
	<string name="location_city">Город</string>
	<string name="location_country">Страна</string>
	<string name="photopick_title">Добавь фотографию</string>
	<string name="button_skip">Пропустить</string>
	<string name="photopick_title_second">Или выбери из базы</string>
	<string name="phone_input_hint_text">Код подтверждения придет к вам в WhatsApp. Также, вы можете получить код в <a>Telegram</a>. \n Если вам не пришел код, свяжитесь с <a>поддержкой</a></string>
	<string name="localized_support_word">поддержкой</string>
	<string name="number_exist_dialog_title">Номер уже есть в системе</string>
	<string name="number_exist_dialog_text">Этот номер уже зарегистрирован в Tennis Bot. Попробуйте войти или восстановить пароль</string>
	<string name="restore_password">Восстановить пароль</string>
	<string name="onboarding_sms_input_title">Введи код отправленный на\n %s</string>
	<string name="onboarding_sms_input_failed_to_request_sms">Не удалось отправить код подтверждения на номер %s</string>
	<string name="onboarding_sms_input_failed_to_validate_sms">Не верный код подтверждения</string>
	<string name="error_no_network_message">Ошибка, проверьте подключение к сети интернет</string>
	<string name="password_title">Придумай пароль</string>
	<string name="password_create_account">Создать аккаунт</string>
	<string name="password_hint">Пароль должен содержать не менее 8 символов, включая как минимум одну букву и одну цифру</string>
	<string name="password_match_hint">Пароли должны совпадать</string>
	<string name="password_agree_with_confidentiality">Нажимая кнопку, вы соглашаетесь \n<a href="https://telegra.ph/Publichnaya-oferta-o-zaklyuchenii-dogovora-ob-okazanii-uslug-03-11">с Политикой конфиденциальности</a></string>
	<string name="password_edittext_hint">Пароль</string>
	<string name="password_confirm_edittext_hint">Подтвердить пароль</string>
	<string name="survey_title_1">Твой уровень игры?</string>
	<string name="survey_small_title">Опрос</string>
	<string name="survey_item_title_1">Новичок</string>
	<string name="survey_item_title_2">Любитель</string>
	<string name="survey_options_item_set1_1">Новичок</string>
	<string name="survey_options_item_set1_2">Любитель</string>
	<string name="survey_options_item_set1_3">Продвинутый</string>
	<string name="survey_options_item_set1_4">Профессионал</string>
	<string name="survey_options_item_set2_1">Слабый</string>
	<string name="survey_options_item_set2_2">Средний</string>
	<string name="survey_options_item_set2_3">Сильный</string>
	<string name="survey_options_item_set2_4">Очень сильный</string>
	<string name="survey_options_item_set3_1">Слабая</string>
	<string name="survey_options_item_set3_2">Средняя</string>
	<string name="survey_options_item_set3_3">Сильная</string>
	<string name="survey_options_item_set3_4">Очень сильная</string>
	<string name="survey_options_item_set4_no">Нет</string>
	<string name="survey_options_item_set4_yes">Да</string>
	<string name="survey_questionsTitlesList_1">Твой уровень игры?</string>
	<string name="survey_questionsTitlesList_2">Оцени уровень Форхенд?</string>
	<string name="survey_questionsTitlesList_3">Оцени уровень Бэкхенд?</string>
	<string name="survey_questionsTitlesList_4">Резаный удар?</string>
	<string name="survey_questionsTitlesList_5">Подача?</string>
	<string name="survey_questionsTitlesList_6">Игра у сетки?</string>
	<string name="survey_questionsTitlesList_7">Скорость игры?</string>
	<string name="survey_questionsTitlesList_8">Участвовал в турнирах?</string>
	<string name="survey_questionsTitlesList_9">Занимал призовые места в турнирах?</string>
	<string name="side_note_title_0">Подсказка</string>
	<string name="survey_side_note_title_1">Теннис бот</string>
	<string name="survey_side_note_text_1">Добро пожаловать в самую большую и умную эко-систему. Пройдите анкетирование, чтобы начать играть. Отвечайте на вопросы честно. От этого будет зависеть ваша сила и будущий поиск равных партнеров.</string>
	<string name="survey_side_note_title_2">Форхенд (удар справа)</string>
	<string name="survey_side_note_text_2">— является одним из основных ударов в теннисе и может быть выполнен справа или слева от корпуса игрока в зависимости от его ведущей руки [правша / левша]</string>
	<string name="survey_side_note_title_3">Бекхенд (удар слева)</string>
	<string name="survey_side_note_text_3">— является одним из основных ударов в теннисе и может быть выполнен справа или слева от корпуса игрока в зависимости от его ведущей руки [правша / левша]</string>
	<string name="survey_side_note_title_4">Резаные или слайсы</string>
	<string name="survey_side_note_text_4">— это удары при которых игрок придает мячу нижне-боковое или нижнее вращение</string>
	<string name="survey_side_note_title_5">Сложный элемент</string>
	<string name="survey_side_note_text_5">Укажите насколько легко и точно вы подаете подачу при игре на счет</string>
	<string name="survey_side_note_title_6">Cкорость и точность</string>
	<string name="survey_side_note_text_6">При выходе к сетке важно без промедления выставить правильно ракетку для точной атаки</string>
	<string name="survey_side_note_title_7">Динамика игры</string>
	<string name="survey_side_note_text_7">От скорости игры зависит ваша работа ног и реакция на качественные удары сопернику</string>
	<string name="survey_side_note_title_8">Это важно</string>
	<string name="survey_side_note_text_8">Ваш опыт в турнирах подскажет другим игрокам, как сильно вы готовились стать непобедимым при экстремальных нагрузках. Кстати, в «Теннис бот» есть онлайн-турниры.</string>
	<string name="survey_side_note_title_9">Почти закончили</string>
	<string name="survey_side_note_text_9">Последний вопрос перед определением вашей силы. Желаем вам хорошей игры и до встречи на корте!</string>
	<string name="survey_start_button">Начать</string>
	<string name="survey_dialog_text">Сейчас система оценит ваш уровень \nсилы. Отвечайте на вопросы честно.</string>
	<string name="survey_dialog_title">Теннис бот опрос</string>
	<string name="survey_results_title_1">Уровень игры</string>
	<string name="survey_results_title_2">Уровень Форхенд</string>
	<string name="survey_results_title_3">Уровень Бэкхенд</string>
	<string name="survey_results_title_4">Резаный удар</string>
	<string name="survey_results_title_5">Подача</string>
	<string name="survey_results_title_6">Игра у сетки</string>
	<string name="survey_results_title_7">Скорость игры</string>
	<string name="survey_results_title_8">Участовал в турнирах</string>
	<string name="survey_results_title_9">Занимал призовые \nместа</string>
	<string name="survey_result_small_title">Опрос завершен</string>
	<string name="survey_result_title">Все ли верно?</string>
	<string name="sport_title">Теннис</string>
	<string name="namegender_title">Расскажи о себе</string>
	<string name="namesurname_female">Девушка</string>
	<string name="namesurname_male">Мужчина</string>
	<string name="namesurname_name">Имя</string>
	<string name="namesurname_surname">Фамилия</string>
	<string name="namesurname_error_text">Поле должно содержать не менее 3-х символов</string>
	<string name="button_continue">Продолжить</string>
	<string name="button_try_again">Пройти еще раз</string>
	<string name="find">Найти</string>
	<string name="location_choose_country">Выбери страну</string>
	<string name="location_choose_city">Выбери город</string>
	<string name="location_choose_district">Выбери район</string>
	<string name="phone_is_registered">Этот номер уже зарегистрирован</string>
	<string name="login_title">Войти</string>
	<string name="enter_password">Введи пароль</string>
	<string name="wrong_pass_or_login">Неправильный логин или пароль</string>
	<string name="login_dialog_text">Сейчас вы можете воспользоваться всеми функциями Теннис Бота в телеграм</string>
	<string name="login_dialog_title">Ваша заявка создана</string>
	<string name="login_dialog_go_chat">Перейти в чат</string>
	<string name="login_dialog_go_bot">Перейти в бот</string>
	<string name="login_hint_text">Если у вас уже есть аккаунт в Tennis Bot, нажмите клавишу \"Восстановить пароль\". Код придет к вам в бот или в WhatsApp</string>
	<string name="calibration_start">Начни играть для завершения калибровки</string>
	<string name="calibration_rounds_remain_text">Сыграй еще %d матчей для завершения калибровки</string>
	<string name="calibration_finished">Игрок проверен системой</string>
	<string name="calibration_title">Требуется калибровка</string>
	<string name="calibration_finished_title">Откалиброван</string>
	<string name="buypro_sub_title">Используй все возможности</string>
	<string name="buypro_title">Подключи PRO</string>
	<string name="account_matches_played">%d матчей сыграно</string>
	<string name="tournament_title">В погоне за ракеткой</string>
	<string name="my_tournaments">Мои турниры</string>
	<string name="invite_friend">Пригласи друга</string>
	<string name="contacts">Контакты</string>
	<string name="game_data">Игровые данные</string>
	<string name="position">Позиция</string>
	<string name="calibration_matches_remain">%d/10</string>
	<string name="last_game_date">Последняя игра %s</string>
	<string name="account_tournament_points">%d Баллов</string>
	<string name="position_number">%s</string>
	<string name="faq">FAQ</string>
	<string name="survey_option_null">Не указано</string>
	<plurals name="matches">
		<item quantity="one">%d матч</item>
		<item quantity="few">%d матчей</item>
		<item quantity="many">%d матчей</item>
		<item quantity="other">%d матчей</item>
	</plurals>
	<string name="all_matches">Все</string>
	<string name="won_matches">Выигранные</string>
	<string name="lost_matches">Проигранные</string>
	<string name="add_score_title">Внести счет</string>
	<string name="score_type_title">Тип счета</string>
	<string name="score_type_single">Одиночный</string>
	<string name="score_type_double">Парный</string>
	<string name="score_type_tournament">Турнирный</string>
	<string name="score_type_friendly">Дружеский</string>
	<string name="button_send">Отправить</string>
	<string name="request_lower_values">Слабее\nменьше %s</string>
	<string name="request_recommended_values">Бот рекомендует\n %s</string>
	<string name="request_higher_values">Сильнее\nбольше %s</string>
	<string name="power">Сила</string>
	<string name="comment_text_hint">Напишите коментарий</string>
	<string name="request_response">Отклик на заявку</string>
</resources>