<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	tools:context=".feed.addscore.AddScoreFragment">

	<ImageView
		android:id="@+id/back_button"
		android:layout_width="36dp"
		android:layout_height="36dp"
		android:layout_marginStart="20dp"
		android:layout_marginTop="10dp"
		android:background="@drawable/search_background"
		android:backgroundTint="@color/tb_gray_border"
		android:padding="6dp"
		android:src="@drawable/chevron_left_wide"
		android:visibility="visible"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:tint="@color/tb_gray_active" />

	<TextView
		android:id="@+id/small_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="19.5dp"
		android:text="@string/add_score_title"
		android:textSize="16sp"
		android:textColor="@color/tb_black"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="20dp"
		android:layout_marginTop="29.5dp"
		android:text="@string/score_type_title"
		android:textColor="@color/tb_black"
		android:textSize="20sp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/small_title" />

	<TextView
		android:id="@+id/option1"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:ellipsize="end"
		android:gravity="center"
		android:lines="1"
		android:clickable="true"
		android:focusable="true"
		android:foreground="@drawable/ripple_green_corners_12dp"
		android:layout_marginTop="16dp"
		android:layout_marginStart="20dp"
		android:layout_marginEnd="10dp"
		android:paddingHorizontal="16dp"
		android:paddingVertical="20dp"
		android:background="@drawable/survey_option_outline"
		android:text="@string/score_type_single"
		android:textColor="@color/tb_black"
		android:textSize="14sp"
		app:layout_constraintTop_toBottomOf="@id/title"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toStartOf="@id/option2"/>

	<TextView
		android:id="@+id/option2"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:ellipsize="end"
		android:gravity="center"
		android:lines="1"
		android:clickable="true"
		android:focusable="true"
		android:foreground="@drawable/ripple_green_corners_12dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="20dp"
		android:paddingHorizontal="16dp"
		android:paddingVertical="20dp"
		android:background="@drawable/survey_option_outline"
		android:text="@string/score_type_double"
		android:textColor="@color/tb_black"
		android:textSize="14sp"
		app:layout_constraintTop_toBottomOf="@id/title"
		app:layout_constraintStart_toEndOf="@id/option1"
		app:layout_constraintEnd_toEndOf="parent"/>

	<TextView
		android:id="@+id/option3"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:ellipsize="end"
		android:gravity="center"
		android:lines="1"
		android:clickable="true"
		android:focusable="true"
		android:foreground="@drawable/ripple_green_corners_12dp"
		android:layout_marginTop="10dp"
		android:layout_marginStart="20dp"
		android:layout_marginEnd="10dp"
		android:paddingHorizontal="16dp"
		android:paddingVertical="20dp"
		android:background="@drawable/survey_option_outline"
		android:text="@string/score_type_tournament"
		android:textColor="@color/tb_black"
		android:textSize="14sp"
		app:layout_constraintTop_toBottomOf="@id/option1"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toStartOf="@id/option4"/>

	<TextView
		android:id="@+id/option4"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:ellipsize="end"
		android:gravity="center"
		android:lines="1"
		android:clickable="true"
		android:focusable="true"
		android:foreground="@drawable/ripple_green_corners_12dp"
		android:layout_marginTop="10dp"
		android:layout_marginEnd="20dp"
		android:paddingHorizontal="16dp"
		android:paddingVertical="20dp"
		android:background="@drawable/survey_option_outline"
		android:text="@string/score_type_friendly"
		android:textColor="@color/tb_black"
		android:textSize="14sp"
		app:layout_constraintTop_toBottomOf="@id/option1"
		app:layout_constraintStart_toEndOf="@id/option3"
		app:layout_constraintEnd_toEndOf="parent"/>

	<View
		android:id="@+id/side_note_background"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_marginTop="24dp"
		android:layout_marginHorizontal="20dp"
		android:layout_marginBottom="-16dp"
		android:background="@drawable/search_background"
		android:orientation="vertical"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/option3"
		app:layout_constraintBottom_toBottomOf="@id/side_note_text"/>

	<TextView
		android:id="@+id/side_note_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:layout_marginHorizontal="16dp"
		android:text="@string/side_note_title_0"
		android:textColor="@color/tb_primary_green"
		android:textSize="16sp"
		app:layout_constraintStart_toStartOf="@id/side_note_background"
		app:layout_constraintTop_toTopOf="@id/side_note_background"/>

	<TextView
		android:id="@+id/side_note_text"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="16dp"
		android:text="@string/survey_side_note_text_9"
		android:textSize="12sp"
		app:layout_constraintStart_toStartOf="@id/side_note_background"
		app:layout_constraintEnd_toEndOf="@id/side_note_background"
		app:layout_constraintTop_toBottomOf="@id/side_note_title" />

	<Button
		android:id="@+id/buttonNext"
		style="@style/Widget.TennisBot.Button.Inactive"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="20dp"
		android:layout_marginBottom="8dp"
		android:enabled="false"
		android:text="@string/onboarding_continue_button"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>