<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:paddingBottom="16dp"
	android:background="@drawable/survey_dialog_rounded">

	<com.airbnb.lottie.LottieAnimationView
		android:id="@+id/darts_animation"
		android:layout_width="32dp"
		android:layout_height="32dp"
		android:layout_marginTop="20dp"
		app:lottie_autoPlay="true"
		app:lottie_loop="false"
		app:lottie_rawRes="@raw/warning_2d"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		/>

	<TextView
		android:id="@+id/dialog_title"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="12dp"
		android:layout_marginHorizontal="16dp"
		android:gravity="center"
		android:text="@string/login_dialog_title"
		android:textColor="@color/tb_black"
		android:textSize="17sp"
		android:textStyle="bold"
		app:layout_constraintTop_toBottomOf="@id/darts_animation"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"/>

	<TextView
		android:id="@+id/dialog_text"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="4dp"
		android:layout_marginHorizontal="16dp"
		android:gravity="center"
		android:text="@string/login_dialog_text"
		android:textSize="13sp"
		app:layout_constraintTop_toBottomOf="@id/dialog_title"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"/>

	<Button
		android:id="@+id/buttonGreen"
		style="@style/Widget.TennisBot.Button.Active"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="16dp"
		android:layout_marginTop="24dp"
		android:text="@string/login_dialog_go_bot"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/dialog_text" />

	<Button
		android:id="@+id/buttonGrey"
		style="@style/Widget.TennisBot.Button.Secondary"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="16dp"
		android:layout_marginTop="10dp"
		android:text="@string/login_dialog_go_chat"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/buttonGreen" />


</androidx.constraintlayout.widget.ConstraintLayout>