<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="@drawable/country_button_outline"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<TextView
		android:id="@+id/title"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/power"
		android:textSize="14sp"
		android:textColor="@color/tb_gray_active"
		android:layout_marginTop="15dp"
		android:layout_marginStart="12dp"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintStart_toStartOf="parent"/>

	<tennis.bot.mobile.feed.requestcreation.GaugeView
		android:id="@+id/gauge_view"
		android:layout_width="0dp"
		android:layout_height="240dp"
		app:showRatingText="false"
		android:layout_marginTop="17.5dp"
		android:layout_marginHorizontal="12dp"
		app:layout_constraintTop_toBottomOf="@id/title"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintBottom_toTopOf="@id/lower_values"/>

	<TextView
		android:id="@+id/lower_values"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:layout_marginStart="12dp"
		android:text="@string/request_lower_values"
		android:textSize="12sp"
		android:textColor="@color/tb_black"
		app:layout_constraintTop_toBottomOf="@id/gauge_view"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toStartOf="@id/recommended_values"/>

	<TextView
		android:id="@+id/recommended_values"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:layout_marginBottom="16dp"
		android:gravity="center"
		android:text="@string/request_recommended_values"
		android:textSize="12sp"
		android:textColor="@color/tb_black"
		app:layout_constraintTop_toBottomOf="@id/gauge_view"
		app:layout_constraintStart_toEndOf="@id/lower_values"
		app:layout_constraintEnd_toStartOf="@id/higher_values"
		app:layout_constraintBottom_toBottomOf="parent"/>

	<TextView
		android:id="@+id/higher_values"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="12dp"
		android:gravity="end"
		android:text="@string/request_higher_values"
		android:textSize="12sp"
		android:textColor="@color/tb_black"
		app:layout_constraintTop_toBottomOf="@id/gauge_view"
		app:layout_constraintStart_toEndOf="@id/recommended_values"
		app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>