<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/survey_dialog_rounded">

	<com.airbnb.lottie.LottieAnimationView
		android:id="@+id/darts_animation"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/survey_gradient_background"
		app:lottie_autoPlay="true"
		app:lottie_loop="false"
		app:lottie_rawRes="@raw/survey_dialog_darts"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintBottom_toTopOf="@+id/bottom_part_layout"/>

	<LinearLayout
		android:id="@+id/bottom_part_layout"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:background="@drawable/survey_dialog_rounded"
		android:orientation="vertical"
		android:padding="16dp"
		android:layout_marginTop="-16dp"
		app:layout_constraintTop_toBottomOf="@id/darts_animation"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent">

		<TextView
			android:id="@+id/dialog_title"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:gravity="center"
			android:text="@string/survey_dialog_title"
			android:textColor="@color/tb_black"
			android:textSize="17sp"
			android:textStyle="bold" />

		<TextView
			android:id="@+id/dialog_text"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="4dp"
			android:gravity="center"
			android:text="@string/survey_dialog_text"
			android:textSize="13sp" />

		<Button
			android:id="@+id/dialog_buttonStart"
			style="@style/Widget.TennisBot.Button.Active"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="24dp"
			android:text="@string/survey_start_button" />
	</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>