<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".profile.matches.MatchesFragment">

	<ImageView
		android:id="@+id/back_button"
		android:layout_width="36dp"
		android:layout_height="36dp"
		android:layout_marginStart="20dp"
		android:layout_marginTop="10dp"
		android:background="@drawable/search_background"
		android:backgroundTint="@color/tb_gray_border"
		android:padding="6dp"
		android:src="@drawable/chevron_vertical"
		android:visibility="visible"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:tint="@color/tb_gray_active" />

	<TextView
		android:id="@+id/title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="15dp"
		android:text="@string/matches"
		android:textSize="17sp"
		android:textColor="@color/tb_black"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/search_bar_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="20dp"
		android:layout_marginTop="22dp"
		android:hint="@string/find"
		android:textColorHint="@color/tb_gray_active"
		app:boxStrokeWidth="-1dp"
		app:boxStrokeWidthFocused="-1dp"
		app:endIconDrawable="@drawable/x"
		app:endIconMode="clear_text"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/title"
		app:startIconDrawable="@drawable/search_lg"
		app:startIconTint="@color/tb_gray_active">

	<com.google.android.material.textfield.TextInputEditText
		android:id="@+id/search_bar_et"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@drawable/search_background" />
	</com.google.android.material.textfield.TextInputLayout>

	<TextView
		android:id="@+id/all_matches_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/all_matches"
		android:textColor="@color/tb_gray_dark"
		android:layout_marginStart="20dp"
		android:paddingHorizontal="12dp"
		android:paddingVertical="6dp"
		android:background="@drawable/search_background"
		android:layout_marginTop="16dp"
		app:layout_constraintTop_toBottomOf="@id/search_bar_layout"

		app:layout_constraintStart_toStartOf="parent"/>

	<TextView
		android:id="@+id/won_matches_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:paddingHorizontal="12dp"
		android:paddingVertical="6dp"
		android:text="@string/won_matches"
		android:textColor="@color/tb_gray_active"
		android:layout_marginTop="16dp"
		app:layout_constraintTop_toBottomOf="@id/search_bar_layout"
		app:layout_constraintStart_toEndOf="@id/all_matches_button"/>

	<TextView
		android:id="@+id/lost_matches_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:paddingHorizontal="12dp"
		android:paddingVertical="6dp"
		android:text="@string/lost_matches"
		android:textColor="@color/tb_gray_active"
		android:layout_marginTop="16dp"
		app:layout_constraintTop_toBottomOf="@id/search_bar_layout"
		app:layout_constraintStart_toEndOf="@id/won_matches_button"/>

	<ImageView
		android:id="@+id/date"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/date"
		android:padding="10dp"
		android:layout_marginTop="9dp"
		android:layout_marginEnd="10dp"
		app:layout_constraintTop_toBottomOf="@id/search_bar_layout"
		app:layout_constraintEnd_toEndOf="parent"/>

	<androidx.recyclerview.widget.RecyclerView
		android:id="@+id/matches_container"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_marginTop="16dp"
		app:layout_constraintTop_toBottomOf="@id/all_matches_button"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>