<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	tools:context=".feed.game.GameOrderResponseDialogFragment">

	<TextView
		android:id="@+id/title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:layout_marginBottom="24dp"
		android:text="@string/request_response"
		android:textSize="20sp"
		android:textColor="@color/tb_black"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<EditText
		android:id="@+id/comment"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="16dp"
		android:layout_marginTop="24dp"
		android:background="@color/invisible"
		android:hint="@string/comment_text_hint"
		android:textColorHint="@color/tb_gray_gray"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@id/title"/>

	<Button
		android:id="@+id/buttonSend"
		style="@style/Widget.TennisBot.Button.Active"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="bottom|center_horizontal"
		android:layout_marginHorizontal="16dp"
		android:layout_marginVertical="24dp"
		android:enabled="true"
		android:text="@string/button_send"
		app:layout_constraintTop_toBottomOf="@id/comment"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintBottom_toBottomOf="parent"/>

	<ProgressBar
		android:id="@+id/button_loading_anim"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:indeterminate="true"
		android:indeterminateTint="@color/tb_white"
		android:visibility="gone"
		app:layout_constraintBottom_toBottomOf="@id/buttonSend"
		app:layout_constraintLeft_toLeftOf="@id/buttonSend"
		app:layout_constraintRight_toRightOf="@id/buttonSend"
		app:layout_constraintTop_toTopOf="@id/buttonSend"
		tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>